# surreal-lite-py

./: README.md  pyproject.toml
src/sblpy/: async_connection.py  connection.py  query.py
src/sblpy/cli/: entrypoint.py
src/sblpy/migrations/: db_processes.py  file_processes.py  migrations.py  runner.py
src/sblpy/pool/: connection_pool.py  setup_config.py
tests/: test_adapter.py  test_async_connection.py  test_connection.py
tests/migrations/: test_db_processes.py  test_file_processes.py  test_migrations.py  test_runner.py
tests/pool/: test_connection_pool.py
