[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdblpy"
version = "0.2.0"
description = "lite surrealDB client that only supports websocket raw queries and async pooled connections"
authors = [
    { name = "Maxwell Flitton", email = "maxwellflitton@gmail.com" }
]
license = {text = "MIT License"}
readme = "README.md"
keywords = ["surrealdb", "lite"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "websockets == 13.1"
]

[project.urls]
Homepage = "https://your.project.homepage"

#[tool.setuptools]
#packages = ["sdblpy"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sdblpy = "sblpy.cli.entrypoint:main"
